src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    DOUBLE64
    DOUBLE8
    ELSE
    ELSEIF
    FOR
    IF
    INT64
    INT8
    NULL
    SEMICOLON
    UDOUBLE
    UDOUBLE64
    UDOUBLE8
    UINT
    UINT64
    UINT8
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     program -> empty
Rule 4     statement -> ID EQUAL expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression DIVIDE expression
Rule 8     expression -> expression TIMES expression
Rule 9     expression -> NUMBER
Rule 10    expression -> MINUS expression
Rule 11    expression -> expression EQ expression
Rule 12    expression -> expression NEQ expression
Rule 13    expression -> expression LT expression
Rule 14    expression -> expression LTE expression
Rule 15    expression -> expression GT expression
Rule 16    expression -> expression GTE expression
Rule 17    expression -> STRING
Rule 18    expression -> CHAR
Rule 19    expression -> LPAREN expression RPAREN
Rule 20    expression -> ID
Rule 21    type -> INT
Rule 22    type -> STRING
Rule 23    type -> DOUBLE
Rule 24    type -> CHAR
Rule 25    type -> BOOL
Rule 26    statement -> type ID EQUAL expression
Rule 27    statement -> type ID
Rule 28    expression -> TRUE
Rule 29    expression -> FALSE
Rule 30    empty -> <empty>
Rule 31    statement -> WRITE STRING
Rule 32    statement -> WRITE expression

Terminals, with rules where they appear

BOOL                 : 25
CHAR                 : 18 24
COMMA                : 
DIVIDE               : 7
DOUBLE               : 23
DOUBLE64             : 
DOUBLE8              : 
ELSE                 : 
ELSEIF               : 
EQ                   : 11
EQUAL                : 4 26
FALSE                : 29
FOR                  : 
GT                   : 15
GTE                  : 16
ID                   : 4 20 26 27
IF                   : 
INT                  : 21
INT64                : 
INT8                 : 
LPAREN               : 19
LT                   : 13
LTE                  : 14
MINUS                : 6 10
NEQ                  : 12
NULL                 : 
NUMBER               : 9
PLUS                 : 5
RPAREN               : 19
SEMICOLON            : 
STRING               : 17 22 31
TIMES                : 8
TRUE                 : 28
UDOUBLE              : 
UDOUBLE64            : 
UDOUBLE8             : 
UINT                 : 
UINT64               : 
UINT8                : 
WHILE                : 
WRITE                : 31 32
error                : 

Nonterminals, with rules where they appear

empty                : 3
expression           : 4 5 5 6 6 7 7 8 8 10 11 11 12 12 13 13 14 14 15 15 16 16 19 26 32
program              : 1 0
statement            : 1 2
type                 : 26 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) program -> . empty
    (4) statement -> . ID EQUAL expression
    (26) statement -> . type ID EQUAL expression
    (27) statement -> . type ID
    (31) statement -> . WRITE STRING
    (32) statement -> . WRITE expression
    (30) empty -> .
    (21) type -> . INT
    (22) type -> . STRING
    (23) type -> . DOUBLE
    (24) type -> . CHAR
    (25) type -> . BOOL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    ID              shift and go to state 4
    WRITE           shift and go to state 6
    $end            reduce using rule 30 (empty -> .)
    INT             shift and go to state 8
    STRING          shift and go to state 7
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    BOOL            shift and go to state 11

  ! ID              [ reduce using rule 30 (empty -> .) ]
  ! WRITE           [ reduce using rule 30 (empty -> .) ]
  ! INT             [ reduce using rule 30 (empty -> .) ]
  ! STRING          [ reduce using rule 30 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 30 (empty -> .) ]
  ! CHAR            [ reduce using rule 30 (empty -> .) ]
  ! BOOL            [ reduce using rule 30 (empty -> .) ]

    program                        shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    type                           shift and go to state 5

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (4) statement -> . ID EQUAL expression
    (26) statement -> . type ID EQUAL expression
    (27) statement -> . type ID
    (31) statement -> . WRITE STRING
    (32) statement -> . WRITE expression
    (21) type -> . INT
    (22) type -> . STRING
    (23) type -> . DOUBLE
    (24) type -> . CHAR
    (25) type -> . BOOL

    ID              shift and go to state 4
    WRITE           shift and go to state 6
    INT             shift and go to state 8
    STRING          shift and go to state 7
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    BOOL            shift and go to state 11

    statement                      shift and go to state 12
    type                           shift and go to state 5

state 2

    (2) program -> statement .

    ID              reduce using rule 2 (program -> statement .)
    WRITE           reduce using rule 2 (program -> statement .)
    INT             reduce using rule 2 (program -> statement .)
    STRING          reduce using rule 2 (program -> statement .)
    DOUBLE          reduce using rule 2 (program -> statement .)
    CHAR            reduce using rule 2 (program -> statement .)
    BOOL            reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (3) program -> empty .

    ID              reduce using rule 3 (program -> empty .)
    WRITE           reduce using rule 3 (program -> empty .)
    INT             reduce using rule 3 (program -> empty .)
    STRING          reduce using rule 3 (program -> empty .)
    DOUBLE          reduce using rule 3 (program -> empty .)
    CHAR            reduce using rule 3 (program -> empty .)
    BOOL            reduce using rule 3 (program -> empty .)
    $end            reduce using rule 3 (program -> empty .)


state 4

    (4) statement -> ID . EQUAL expression

    EQUAL           shift and go to state 13


state 5

    (26) statement -> type . ID EQUAL expression
    (27) statement -> type . ID

    ID              shift and go to state 14


state 6

    (31) statement -> WRITE . STRING
    (32) statement -> WRITE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    STRING          shift and go to state 15
    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 16

state 7

    (22) type -> STRING .

    ID              reduce using rule 22 (type -> STRING .)


state 8

    (21) type -> INT .

    ID              reduce using rule 21 (type -> INT .)


state 9

    (23) type -> DOUBLE .

    ID              reduce using rule 23 (type -> DOUBLE .)


state 10

    (24) type -> CHAR .

    ID              reduce using rule 24 (type -> CHAR .)


state 11

    (25) type -> BOOL .

    ID              reduce using rule 25 (type -> BOOL .)


state 12

    (1) program -> program statement .

    ID              reduce using rule 1 (program -> program statement .)
    WRITE           reduce using rule 1 (program -> program statement .)
    INT             reduce using rule 1 (program -> program statement .)
    STRING          reduce using rule 1 (program -> program statement .)
    DOUBLE          reduce using rule 1 (program -> program statement .)
    CHAR            reduce using rule 1 (program -> program statement .)
    BOOL            reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 13

    (4) statement -> ID EQUAL . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 24

state 14

    (26) statement -> type ID . EQUAL expression
    (27) statement -> type ID .

    EQUAL           shift and go to state 26
    ID              reduce using rule 27 (statement -> type ID .)
    WRITE           reduce using rule 27 (statement -> type ID .)
    INT             reduce using rule 27 (statement -> type ID .)
    STRING          reduce using rule 27 (statement -> type ID .)
    DOUBLE          reduce using rule 27 (statement -> type ID .)
    CHAR            reduce using rule 27 (statement -> type ID .)
    BOOL            reduce using rule 27 (statement -> type ID .)
    $end            reduce using rule 27 (statement -> type ID .)


state 15

    (31) statement -> WRITE STRING .
    (17) expression -> STRING .

  ! reduce/reduce conflict for ID resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for WRITE resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for INT resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for STRING resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for DOUBLE resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for CHAR resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for BOOL resolved using rule 17 (expression -> STRING .)
  ! reduce/reduce conflict for $end resolved using rule 17 (expression -> STRING .)
    PLUS            reduce using rule 17 (expression -> STRING .)
    MINUS           reduce using rule 17 (expression -> STRING .)
    DIVIDE          reduce using rule 17 (expression -> STRING .)
    TIMES           reduce using rule 17 (expression -> STRING .)
    EQ              reduce using rule 17 (expression -> STRING .)
    NEQ             reduce using rule 17 (expression -> STRING .)
    LT              reduce using rule 17 (expression -> STRING .)
    LTE             reduce using rule 17 (expression -> STRING .)
    GT              reduce using rule 17 (expression -> STRING .)
    GTE             reduce using rule 17 (expression -> STRING .)
    ID              reduce using rule 17 (expression -> STRING .)
    WRITE           reduce using rule 17 (expression -> STRING .)
    INT             reduce using rule 17 (expression -> STRING .)
    STRING          reduce using rule 17 (expression -> STRING .)
    DOUBLE          reduce using rule 17 (expression -> STRING .)
    CHAR            reduce using rule 17 (expression -> STRING .)
    BOOL            reduce using rule 17 (expression -> STRING .)
    $end            reduce using rule 17 (expression -> STRING .)

  ! ID              [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! WRITE           [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! INT             [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! STRING          [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! DOUBLE          [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! CHAR            [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! BOOL            [ reduce using rule 31 (statement -> WRITE STRING .) ]
  ! $end            [ reduce using rule 31 (statement -> WRITE STRING .) ]


state 16

    (32) statement -> WRITE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . TIMES expression
    (11) expression -> expression . EQ expression
    (12) expression -> expression . NEQ expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . LTE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . GTE expression

    ID              reduce using rule 32 (statement -> WRITE expression .)
    WRITE           reduce using rule 32 (statement -> WRITE expression .)
    INT             reduce using rule 32 (statement -> WRITE expression .)
    STRING          reduce using rule 32 (statement -> WRITE expression .)
    DOUBLE          reduce using rule 32 (statement -> WRITE expression .)
    CHAR            reduce using rule 32 (statement -> WRITE expression .)
    BOOL            reduce using rule 32 (statement -> WRITE expression .)
    $end            reduce using rule 32 (statement -> WRITE expression .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    DIVIDE          shift and go to state 29
    TIMES           shift and go to state 30
    EQ              shift and go to state 31
    NEQ             shift and go to state 32
    LT              shift and go to state 33
    LTE             shift and go to state 34
    GT              shift and go to state 35
    GTE             shift and go to state 36


state 17

    (10) expression -> MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 37

state 18

    (9) expression -> NUMBER .

    PLUS            reduce using rule 9 (expression -> NUMBER .)
    MINUS           reduce using rule 9 (expression -> NUMBER .)
    DIVIDE          reduce using rule 9 (expression -> NUMBER .)
    TIMES           reduce using rule 9 (expression -> NUMBER .)
    EQ              reduce using rule 9 (expression -> NUMBER .)
    NEQ             reduce using rule 9 (expression -> NUMBER .)
    LT              reduce using rule 9 (expression -> NUMBER .)
    LTE             reduce using rule 9 (expression -> NUMBER .)
    GT              reduce using rule 9 (expression -> NUMBER .)
    GTE             reduce using rule 9 (expression -> NUMBER .)
    ID              reduce using rule 9 (expression -> NUMBER .)
    WRITE           reduce using rule 9 (expression -> NUMBER .)
    INT             reduce using rule 9 (expression -> NUMBER .)
    STRING          reduce using rule 9 (expression -> NUMBER .)
    DOUBLE          reduce using rule 9 (expression -> NUMBER .)
    CHAR            reduce using rule 9 (expression -> NUMBER .)
    BOOL            reduce using rule 9 (expression -> NUMBER .)
    $end            reduce using rule 9 (expression -> NUMBER .)
    RPAREN          reduce using rule 9 (expression -> NUMBER .)


state 19

    (18) expression -> CHAR .

    PLUS            reduce using rule 18 (expression -> CHAR .)
    MINUS           reduce using rule 18 (expression -> CHAR .)
    DIVIDE          reduce using rule 18 (expression -> CHAR .)
    TIMES           reduce using rule 18 (expression -> CHAR .)
    EQ              reduce using rule 18 (expression -> CHAR .)
    NEQ             reduce using rule 18 (expression -> CHAR .)
    LT              reduce using rule 18 (expression -> CHAR .)
    LTE             reduce using rule 18 (expression -> CHAR .)
    GT              reduce using rule 18 (expression -> CHAR .)
    GTE             reduce using rule 18 (expression -> CHAR .)
    ID              reduce using rule 18 (expression -> CHAR .)
    WRITE           reduce using rule 18 (expression -> CHAR .)
    INT             reduce using rule 18 (expression -> CHAR .)
    STRING          reduce using rule 18 (expression -> CHAR .)
    DOUBLE          reduce using rule 18 (expression -> CHAR .)
    CHAR            reduce using rule 18 (expression -> CHAR .)
    BOOL            reduce using rule 18 (expression -> CHAR .)
    $end            reduce using rule 18 (expression -> CHAR .)
    RPAREN          reduce using rule 18 (expression -> CHAR .)


state 20

    (19) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 38

state 21

    (20) expression -> ID .

    PLUS            reduce using rule 20 (expression -> ID .)
    MINUS           reduce using rule 20 (expression -> ID .)
    DIVIDE          reduce using rule 20 (expression -> ID .)
    TIMES           reduce using rule 20 (expression -> ID .)
    EQ              reduce using rule 20 (expression -> ID .)
    NEQ             reduce using rule 20 (expression -> ID .)
    LT              reduce using rule 20 (expression -> ID .)
    LTE             reduce using rule 20 (expression -> ID .)
    GT              reduce using rule 20 (expression -> ID .)
    GTE             reduce using rule 20 (expression -> ID .)
    ID              reduce using rule 20 (expression -> ID .)
    WRITE           reduce using rule 20 (expression -> ID .)
    INT             reduce using rule 20 (expression -> ID .)
    STRING          reduce using rule 20 (expression -> ID .)
    DOUBLE          reduce using rule 20 (expression -> ID .)
    CHAR            reduce using rule 20 (expression -> ID .)
    BOOL            reduce using rule 20 (expression -> ID .)
    $end            reduce using rule 20 (expression -> ID .)
    RPAREN          reduce using rule 20 (expression -> ID .)


state 22

    (28) expression -> TRUE .

    PLUS            reduce using rule 28 (expression -> TRUE .)
    MINUS           reduce using rule 28 (expression -> TRUE .)
    DIVIDE          reduce using rule 28 (expression -> TRUE .)
    TIMES           reduce using rule 28 (expression -> TRUE .)
    EQ              reduce using rule 28 (expression -> TRUE .)
    NEQ             reduce using rule 28 (expression -> TRUE .)
    LT              reduce using rule 28 (expression -> TRUE .)
    LTE             reduce using rule 28 (expression -> TRUE .)
    GT              reduce using rule 28 (expression -> TRUE .)
    GTE             reduce using rule 28 (expression -> TRUE .)
    ID              reduce using rule 28 (expression -> TRUE .)
    WRITE           reduce using rule 28 (expression -> TRUE .)
    INT             reduce using rule 28 (expression -> TRUE .)
    STRING          reduce using rule 28 (expression -> TRUE .)
    DOUBLE          reduce using rule 28 (expression -> TRUE .)
    CHAR            reduce using rule 28 (expression -> TRUE .)
    BOOL            reduce using rule 28 (expression -> TRUE .)
    $end            reduce using rule 28 (expression -> TRUE .)
    RPAREN          reduce using rule 28 (expression -> TRUE .)


state 23

    (29) expression -> FALSE .

    PLUS            reduce using rule 29 (expression -> FALSE .)
    MINUS           reduce using rule 29 (expression -> FALSE .)
    DIVIDE          reduce using rule 29 (expression -> FALSE .)
    TIMES           reduce using rule 29 (expression -> FALSE .)
    EQ              reduce using rule 29 (expression -> FALSE .)
    NEQ             reduce using rule 29 (expression -> FALSE .)
    LT              reduce using rule 29 (expression -> FALSE .)
    LTE             reduce using rule 29 (expression -> FALSE .)
    GT              reduce using rule 29 (expression -> FALSE .)
    GTE             reduce using rule 29 (expression -> FALSE .)
    ID              reduce using rule 29 (expression -> FALSE .)
    WRITE           reduce using rule 29 (expression -> FALSE .)
    INT             reduce using rule 29 (expression -> FALSE .)
    STRING          reduce using rule 29 (expression -> FALSE .)
    DOUBLE          reduce using rule 29 (expression -> FALSE .)
    CHAR            reduce using rule 29 (expression -> FALSE .)
    BOOL            reduce using rule 29 (expression -> FALSE .)
    $end            reduce using rule 29 (expression -> FALSE .)
    RPAREN          reduce using rule 29 (expression -> FALSE .)


state 24

    (4) statement -> ID EQUAL expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . TIMES expression
    (11) expression -> expression . EQ expression
    (12) expression -> expression . NEQ expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . LTE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . GTE expression

    ID              reduce using rule 4 (statement -> ID EQUAL expression .)
    WRITE           reduce using rule 4 (statement -> ID EQUAL expression .)
    INT             reduce using rule 4 (statement -> ID EQUAL expression .)
    STRING          reduce using rule 4 (statement -> ID EQUAL expression .)
    DOUBLE          reduce using rule 4 (statement -> ID EQUAL expression .)
    CHAR            reduce using rule 4 (statement -> ID EQUAL expression .)
    BOOL            reduce using rule 4 (statement -> ID EQUAL expression .)
    $end            reduce using rule 4 (statement -> ID EQUAL expression .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    DIVIDE          shift and go to state 29
    TIMES           shift and go to state 30
    EQ              shift and go to state 31
    NEQ             shift and go to state 32
    LT              shift and go to state 33
    LTE             shift and go to state 34
    GT              shift and go to state 35
    GTE             shift and go to state 36


state 25

    (17) expression -> STRING .

    PLUS            reduce using rule 17 (expression -> STRING .)
    MINUS           reduce using rule 17 (expression -> STRING .)
    DIVIDE          reduce using rule 17 (expression -> STRING .)
    TIMES           reduce using rule 17 (expression -> STRING .)
    EQ              reduce using rule 17 (expression -> STRING .)
    NEQ             reduce using rule 17 (expression -> STRING .)
    LT              reduce using rule 17 (expression -> STRING .)
    LTE             reduce using rule 17 (expression -> STRING .)
    GT              reduce using rule 17 (expression -> STRING .)
    GTE             reduce using rule 17 (expression -> STRING .)
    ID              reduce using rule 17 (expression -> STRING .)
    WRITE           reduce using rule 17 (expression -> STRING .)
    INT             reduce using rule 17 (expression -> STRING .)
    STRING          reduce using rule 17 (expression -> STRING .)
    DOUBLE          reduce using rule 17 (expression -> STRING .)
    CHAR            reduce using rule 17 (expression -> STRING .)
    BOOL            reduce using rule 17 (expression -> STRING .)
    $end            reduce using rule 17 (expression -> STRING .)
    RPAREN          reduce using rule 17 (expression -> STRING .)


state 26

    (26) statement -> type ID EQUAL . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 39

state 27

    (5) expression -> expression PLUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 40

state 28

    (6) expression -> expression MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 41

state 29

    (7) expression -> expression DIVIDE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 42

state 30

    (8) expression -> expression TIMES . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 43

state 31

    (11) expression -> expression EQ . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 44

state 32

    (12) expression -> expression NEQ . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 45

state 33

    (13) expression -> expression LT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 46

state 34

    (14) expression -> expression LTE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . NUMBER
    (10) expression -> . MINUS expression
    (11) expression -> . expression EQ expression
    (12) expression -> . expression NEQ expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression LTE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression GTE expression
    (17) expression -> . STRING
    (18) expression -> . CHAR
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . ID
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NUMBER          shift and go to state 18
    MINUS           shift and go to state 17
    STRING          shift and go to state 25
    CHAR            shift and go to state 19
    LPAREN          shift and go to state 20
    ID              shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 47

state 35
